# zora-take-home-assessment

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  pyrightconfig.json
artifacts/: business_metrics.json  business_report.txt  churn_model.pkl  evaluation_results.json  feature_importance.csv  feature_names.json  feature_scaler.pkl  model_summary.json  predictions.csv
notebooks/: 1.0-gr-initial-data-exploration.ipynb  collection_activity_report.html  collectors_data_profile.html
tests/: conftest.py  test_config.py  test_dataset.py  test_features.py  test_modeling.py  test_pipeline.py
tests/fixtures/: sample_activity.csv  sample_collectors.csv
ztha/: __init__.py  config.py  dataset.py  evaluator.py  features.py  model_trainer.py  pipeline.py  plots.py
ztha/modeling/: predict.py  train.py
